# AI-Powered-Bilingual-Menu-Translation-System

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  QUICKSTART.md  README.md  SETUP_COMPLETE.md  app.py  app_gradio.py  bilingual_menu_translation.ipynb  git_commands.ps1  menu_dataset.csv  pyproject.toml  requirements.txt  setup.ps1  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
